src/objects/Product2/fields/Standard_From_Vietnam__c.field-meta.xml
<CustomField>
    <fullName>Standard_From_Vietnam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Advises if the standard cost that is displayed came from -03 Vietnam in Glovia</description>
    <inlineHelpText>If this box is checked the standard cost is from -03 Vietnam in Glovia</inlineHelpText>
    <label>Standard From Vietnam</label>
    <type>Checkbox</type>
</CustomField>