src/objects/Product2/fields/Suggested_Replacement_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Replacement_Part_Number__c</fullName>
    <label>Suggested Replacement Part Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>