src/objects/Product2/fields/USMO__c.field-meta.xml
<CustomField>
    <fullName>USMO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>USMO</label>
    <type>Checkbox</type>
</CustomField>