src/objects/Product2/fields/Variable_Cost__c.field-meta.xml
<CustomField>
    <fullName>Variable_Cost__c</fullName>
    <label>Variable Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>