src/objects/Product2/fields/Vietnam_Make__c.field-meta.xml
<CustomField>
    <fullName>Vietnam_Make__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked Glovia is showing as  Make. Glovia will populate this field.</inlineHelpText>
    <label>Vietnam Make</label>
    <type>Checkbox</type>
</CustomField>