src/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Marketing_P_N__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Business_Unit__c</columns>
    <columns>Sourcing_Org__c</columns>
    <columns>Available__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Commodity_Code__c</columns>
    <columns>Child_Product_Check__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Duplicate_Product__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Products</label>
</ListView>